--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <footer>
       <p>&copy; 2024 Shreyank Shettar</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
